--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -1,11 +1,11 @@
 appname = nps
 #Boot mode(dev|pro)
-runmode = dev
+runmode = pro
 
 #HTTP(S) proxy port, no startup if empty
 http_proxy_ip=0.0.0.0
-http_proxy_port=80
-https_proxy_port=443
+http_proxy_port=
+https_proxy_port=
 https_just_proxy=true
 #default https certificate setting
 https_default_cert_file=conf/server.pem
@@ -13,12 +13,12 @@ https_default_key_file=conf/server.key
 
 ##bridge
 bridge_type=tcp
-bridge_port=8024
+bridge_port=8025
 bridge_ip=0.0.0.0
 
 # Public password, which clients can use to connect to the server
 # After the connection, the server will be able to open relevant ports and parse related domain names according to its own configuration file.
-public_vkey=123
+public_vkey=123321
 
 #Traffic data persistence interval(minute)
 #Ignorance means no persistence
@@ -36,10 +36,10 @@ log_level=7
 #p2p_port=6000
 
 #web
-web_host=a.o.com
+web_host=
 web_username=admin
-web_password=123
-web_port = 8080
+web_password=admin
+web_port = 18080
 web_ip=0.0.0.0
 web_base_url=
 web_open_ssl=false
