1、更新到3.1 2、增加流量控制、连接数限制、到期自动停止 3、优化一键安装脚本 4、bug修复

--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -1,6 +1,6 @@
 appname = nps
 #Boot mode(dev|pro)
-runmode = pro
+runmode = dev
 
 #HTTP(S) proxy port, no startup if empty
 http_proxy_ip=0.0.0.0
@@ -13,7 +13,7 @@ https_default_key_file=conf/server.key
 
 ##bridge
 bridge_type=tcp
-bridge_port=8025
+bridge_port=8024
 bridge_ip=0.0.0.0
 
 # Public password, which clients can use to connect to the server
@@ -22,11 +22,11 @@ public_vkey=123321
 
 #Traffic data persistence interval(minute)
 #Ignorance means no persistence
-#flow_store_interval=1
+flow_store_interval=1
 
 # log level LevelEmergency->0  LevelAlert->1 LevelCritical->2 LevelError->3 LevelWarning->4 LevelNotice->5 LevelInformational->6 LevelDebug->7
-log_level=7
-#log_path=nps.log
+log_level=6
+log_path=nps.log
 
 #Whether to restrict IP access, true or false or ignore
 #ip_limit=true
@@ -36,7 +36,7 @@ log_level=7
 #p2p_port=6000
 
 #web
-web_host=
+web_host=a.o.com
 web_username=admin
 web_password=admin
 web_port = 18080
@@ -51,7 +51,9 @@ web_key_file=conf/server.key
 #Web API unauthenticated IP address(the len of auth_crypt_key must be 16)
 #Remove comments if needed
 #auth_key=test
-auth_crypt_key =1234567812345678
+auth_key=123
+#获取服务端authKey时的aes加密密钥，16位
+auth_crypt_key =213
 
 #allow_ports=9001-9009,10001,11000-12000
 
@@ -60,22 +62,29 @@ allow_user_login=false
 allow_user_register=false
 allow_user_change_username=false
 
-
 #extension
-allow_flow_limit=false
-allow_rate_limit=false
-allow_tunnel_num_limit=false
+#流量限制
+allow_flow_limit=true
+#带宽限制
+allow_rate_limit=true
+#客户端最大隧道数限制
+allow_tunnel_num_limit=true
 allow_local_proxy=false
-allow_connection_num_limit=false
-allow_multi_ip=false
-system_info_display=false
+#客户端最大连接数
+allow_connection_num_limit=true
+#每个隧道监听不同的服务端端口
+allow_multi_ip=true
+system_info_display=true
+
+#获取用户真实ip
+http_add_origin_header=true
 
 #cache
 http_cache=false
 http_cache_length=100
 
 #get origin ip
-http_add_origin_header=false
+#http_add_origin_header=false
 
 #pprof debug options
 #pprof_ip=0.0.0.0
@@ -83,3 +92,11 @@ http_add_origin_header=false
 
 #client disconnect timeout
 disconnect_timeout=60
+
+#管理面板开启验证码校验
+open_captcha=false
+
+
+# 是否开启tls
+tls_enable=false
+tls_bridge_port=8025
